--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 		<li>Homework 6: NerdLuv Session</li>
 		<li>Final Project</li>
 	</ul>
-		<p> 
-   			<a href="http://validator.w3.org/check/referer"> 
-      			<img src="http://mumstudents.org/cs472/2013-09/images/w3c-html.png" alt="Validate" /> 
-   			</a>
-		</p>
+	<a
+	href="http://validator.w3.org/check/referer"> <img
+	src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
+	alt="html validator"/>
+	</a>
 	</body>
 </html>
