--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 	<img src="pic.jpg" alt="my zurag" height="120" width="120">
-	<h2>Odbayar Nanijdjamts</h2>
+	<h2>Odbayar Nanjidjamts</h2>
 	<ul>
 		<li>Lab0: This Homepage</li>
 		<li><a href="myweb/lab2/aboutme.html">Lab1: About Me</a></li>
@@ -21,10 +21,12 @@
 		<li>Homework 6: NerdLuv Session</li>
 		<li>Final Project</li>
 	</ul>
-	<a
-	href="http://validator.w3.org/check/referer"> <img
-	src="http://mumstudents.org/cs472/2014-09/images/w3c-html.png"
-	alt="html validator"/>
-	</a>
+	<p>
+  	<a href="http://validator.w3.org/check?uri=referer"
+     	onclick="this.href='http://validator.w3.org/check?uri=' + 
+	document.URL"><img
+        src="http://www.w3.org/Icons/valid-xhtml10"
+        alt="Valid XHTML 1.0!" height="31" width="88" /></a>
+	</p>
 	</body>
 </html>
