--- a/index.html
+++ b/index.html
@@ -5,22 +5,61 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta http-equiv="X-UA-Compatible" content="ie=edge">
     	<title>Document</title>
+  	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+  	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+  	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+  	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
 	</head>
 	<body>
-	<img src="pic.jpg" alt="my zurag" height="120" width="120">
-	<h2>Odbayar Nanjidjamts</h2>
-	<ul>
-		<li>Lab0: This Homepage</li>
-		<li><a href="myweb/lab2/aboutme.html">Lab1: About Me</a></li>
-		<li>Homework 1: Grandma's Lemon Meringue Pie</li>
-		<li>Homework 2: Movie Review</li>
-		<li>Lab 3: My Music Page</li>
-		<li>Homework 3: Movie Review PHP</li>
-		<li>Homework 4: NerdLuv</li>
-		<li>Homework 5: NerdLuv DB</li>
-		<li>Homework 6: NerdLuv Session</li>
-		<li>Final Project</li>
-	</ul>
+
+	<div class="jumbotron text-center">
+  	<h1>WAP CS472 Course 2020</h1>
+  	<p>HTML, CSS, JavaScript, Servlet, JSP, Ajax, JQuery, Bootsrap</p> 
+	</div>
+
+	<div class="container">
+        <img src="images/Odko.jpg" alt="Odko" style="height: 300px;" />
+        <h2>Odbayar Nanjidjamts</h2>
+	      <div>
+        <ul>
+          <li>
+            <a href="#">Lab 01 - Home Page</a>
+          </li>
+          <li>
+            <a href="about.html">Lab 02-1 - About me</a>
+          </li>
+          <li>
+            <a href="pie.html">Lab 02-2 - Recipe</a>
+          </li>
+          <li>
+            <a href="#">Lab 03 </a>
+          </li>
+          <li>
+            <a href="#">Lab 04 </a>
+          </li>
+          <li>
+            <a href="#">Lab 05 </a>
+          </li>
+          <li>
+            <a href="#">Lab 06 </a>
+          </li>
+          <li>
+            <a href="#">Lab 07 </a>
+          </li>
+          <li>
+            <a href="#">Lab 08 </a>
+          </li>
+          <li>
+            <a href="#">Lab 09 </a>
+          </li>
+          <li>
+            <a href="#">Lab 10 </a>
+          </li>
+          <li>
+            <a href="#">Lab 11 </a>
+          </li>
+        </ul>
+      </div>
 	<p>
   	<a href="http://validator.w3.org/check?uri=referer"
      	onclick="this.href='http://validator.w3.org/check?uri=' + 
