addiing movie review

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="pie.html">Lab 02-2 - Recipe</a>
           </li>
           <li>
-            <a href="#">Lab 03 </a>
+            <a href="tmnt.html">Lab 03b - Moview review </a>
           </li>
           <li>
             <a href="#">Lab 04 </a>
