--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <a href="#">Lab 06 </a>
           </li>
           <li>
-            <a href="#">Lab 07 </a>
+            <a href="basicJavaScript.html">Lab 07 - Basic JavaScript </a>
           </li>
           <li>
             <a href="#">Lab 08 </a>
