--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <a href="#">Lab 01 - Home Page</a>
           </li>
           <li>
-            <a href="about.html">Lab 02-1 - About me</a>
+            <a href="AboutMe.html">Lab 02-1 - About me</a>
           </li>
           <li>
             <a href="pie.html">Lab 02-2 - Recipe</a>
