--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="tmnt.html">Lab 03b - Moview review </a>
           </li>
           <li>
-            <a href="#">Lab 04 </a>
+            <a href="tasklist.html">Lab 04 - Task List HTML Page</a>
           </li>
           <li>
             <a href="#">Lab 05 </a>
