added lab6 assignment

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <a href="pie.html">Lab 02-2 - Recipe</a>
           </li>
           <li>
-            <a href="tmnt.html">Lab 03b - Moview review </a>
+            <a href="tmnt.html">Lab 03-2 - Moview review </a>
           </li>
           <li>
             <a href="tasklist.html">Lab 04 - Task List HTML Page</a>
@@ -41,7 +41,7 @@
             <a href="#">Lab 05 </a>
           </li>
           <li>
-            <a href="#">Lab 06 </a>
+            <a href="decoratemytext.html">Lab 06 - Decorate </a>
           </li>
           <li>
             <a href="basicJavaScript.html">Lab 07 - Basic JavaScript </a>
