--- a/decoratemytext.html
+++ b/decoratemytext.html
@@ -13,7 +13,7 @@
     <h1>Text Decorator</h1>
 
     <div>
-        <img src="files/decorated.gif" alt="very decorated!">
+        <img src="Files/decorated.gif" alt="very decorated!">
     </div>
     <div>
         <fieldset>
