--- a/tasklist.html
+++ b/tasklist.html
@@ -4,11 +4,7 @@
     <meta charset="utf-8" />
     <title>Task list</title>
     <link
-      rel="stylesheet"
-      type="text/css"
-      href="tasks.css"
-      media="screen"
-    />
+      rel="stylesheet" type="text/css" href="./css/tasks.css" media="screen" />
   </head>
   <body>
     <header>
