--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Odbayar Nanjidjamts CS472</title>
-    <link rel="stylesheet" type="text/css" href="AboutMe.css">
+    <link rel="stylesheet" type="text/css" href="./css/AboutMe.css">
 </head>
 
 <body>
