--- a/pie.html
+++ b/pie.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Odbayar Nanjidjamts, Homework-1</title>
-    <link rel="stylesheet" href="recipe.css" type="text/css">
+    <link rel="stylesheet" href="./css/recipe.css" type="text/css">
     <link rel='icon' href='https://courses.cs.washington.edu/courses/cse190m/09sp/homework/1/pie_icon.gif'
         type='image/x-icon' />
 </head>
