--- a/tmnt.html
+++ b/tmnt.html
@@ -3,7 +3,7 @@
 <head>
     <title>Odko's movie review</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <link rel="stylesheet" href="movie.css" type="text/css">
+    <link rel="stylesheet" href="./css/movie.css" type="text/css">
 </head>
 
 <body>
