--- a/decoratemytext.html
+++ b/decoratemytext.html
@@ -5,8 +5,8 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Text Decorator</title>
-    <link href="files/decoratemytext.css" type="text/css" rel="stylesheet">
-    <script src="files/decoratemytext.js" type="text/javascript"></script>
+    <link href="./css/decoratemytext.css" type="text/css" rel="stylesheet">
+    <script src="Files/decoratemytext.js" type="text/javascript"></script>
 
 </head>
 
