--- a/decoratemytext.html
+++ b/decoratemytext.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
     <title>Text Decorator</title>
     <link href="./css/decoratemytext.css" type="text/css" rel="stylesheet">
-    <script src="Files/decoratemytext.js" type="text/javascript"></script>
+    <script src="./Files/decoratemytext.js" type="text/javascript"></script>
 
 </head>
 
