--- a/decoratemytext.html
+++ b/decoratemytext.html
@@ -1,6 +1,4 @@
 <!DOCTYPE html>
-<!-- saved from url=(0066)http://mumstudents.org/cs472/2019-10-BL/Labs/6/decoratemytext.html -->
-<html class="gr__mumstudents_org">
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
@@ -10,6 +8,7 @@
 
 </head>
 
+    <body id="body" data-gr-c-s-loaded="true">
     <h1>Text Decorator</h1>
 
     <div>
