--- a/AboutMe.html
+++ b/AboutMe.html
@@ -4,7 +4,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <title>Odbayar Nanjidjamts CS472</title>
-    <link rel="stylesheet" type="text/css" href="./css/AboutMe.css">
+    <link rel="stylesheet" type="text/css" href="./css/aboutMe.css">
 </head>
 
 <body>
@@ -62,8 +62,8 @@
         <div class="Box5">
             <h3>Fun Facts About My Neighbor</h3>
             <ul>
-                <li>I don't even know his name</li>
-                <li>Pretty sure he doesn't know my name too</li>
+                <li>Galaa, his funny and friendly</li>
+                <li>Murad has a good experience in software industry</li>
             </ul>
             <a href="http://validator.w3.org/check/referer">
                 <img src="../../Files/w3c-html.png" alt="html validator">
