--- a/AboutMe.html
+++ b/AboutMe.html
@@ -34,9 +34,9 @@
             <h3>My class this quarter</h3>
             <ul>
                 <li>CS472 - Web application programming </li>
-                <li>CS545 - Web application architecture </li>
+                <li>CS473 - Software engineer </li>
                 <li>CS544 - Enterprise architecture </li>
-                <li>CS435 - Algorithms </li>
+                <li>CS543 - WAA </li>
             </ul>
         </div>
         <div class="Box4">
