--- a/decoratemytext.html
+++ b/decoratemytext.html
@@ -21,6 +21,8 @@
         </fieldset>
         <fieldset>
             <legend>Decoration</legend>
+            <button id="PigLaitButton" class="lab6Button">Igpay Atinlay</button>
+            <button id="Malkovitch" class="lab6Button">Malkovitch</button>
             <button id="decButton" class="lab6Button">Bigger decorations!</button>
             <br>
             <label> <input id="chBox" type="checkbox"> Bling </label>
