--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <a href="basicJavaScript.html">Lab 07 - Basic JavaScript </a>
           </li>
           <li>
-            <a href="#">Lab 08 </a>
+            <a href="animation.html">Lab 08 - ASCII Animation</a>
           </li>
           <li>
             <a href="#">Lab 09 </a>
