--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <a href="animation.html">Lab 08 - ASCII Animation</a>
           </li>
           <li>
-            <a href="#">Lab 09 </a>
+            <a href="./Files/JSPractice.js">Lab 09 - JS Practice </a>
           </li>
           <li>
             <a href="#">Lab 10 </a>
