--- a/index.html
+++ b/index.html
@@ -53,10 +53,10 @@
             <a href="./Files/JSPractice.js">Lab 09 - JS Practice </a>
           </li>
           <li>
-            <a href="#">Lab 10 </a>
+            <a href="inheritance.html">Lab 10 - Inheritance </a>
           </li>
           <li>
-            <a href="#">Lab 11 </a>
+            <a href="classes.html">Lab 11 - Classes </a>
           </li>
         </ul>
       </div>
