--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+z<!DOCTYPE html>
 <html lang="en">
 	<head>
 		<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
@@ -57,6 +57,9 @@
           </li>
           <li>
             <a href="classes.html">Lab 11 - Classes </a>
+          </li>
+          <li>
+            <a href="Maze.html">Lab 11 - Maze </a>
           </li>
         </ul>
       </div>
