--- a/index.html
+++ b/index.html
@@ -61,6 +61,9 @@ z<!DOCTYPE html>
           <li>
             <a href="Maze.html">Lab 11 - Maze </a>
           </li>
+    	  <li>
+            <a href="bubble.html">Lab 12 - Clean Screen </a>
+          </li>
         </ul>
       </div>
 	<p>
